--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,16 +8,24 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
+    "firebase": "^10.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.260.0",
+    "proxy": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.0-beta.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8800/api"
 }
